Closed Bug 1628942 Opened 4 years ago Closed 4 years ago

Console log messages for anti-tracking heuristics should not mention "tracker" with dFPI

Categories

(Core :: Privacy: Anti-Tracking, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla78
Tracking Status
firefox78 --- fixed

People

(Reporter: englehardt, Assigned: xeonchen)

References

(Blocks 2 open bugs)

Details

Attachments

(1 file)

In Bug 1489077 we implemented console logs for our anti-tracking heuristics. These console logs explicitly refer to "tracker" origins. We've now wired Dynamic FPI into these heuristics, and thus should make the "tracker" language more generic.

As an example, go to https://senglehardt.com/test/dfpi/first_and_third.html, open the console, and click "here" at the bottom of the third iframe. This triggers the window.open heuristic. The console message will be Storage access automatically granted for tracker “https://englehardt-tracker.com” on “https://senglehardt.com”.. Despite the first origin's hostname, this load isn't actually classified as a tracker by Firefox and thus the message shouldn't say "tracker".

Assignee: nobody → xeonchen
Status: NEW → ASSIGNED
Pushed by xeonchen@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/5a0128e4d3d5
replace `tracker` wording by `site`; r=englehardt
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla78
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: