Bug 1628942 - replace `tracker` wording by `site`; r=englehardt

Differential Revision: https://phabricator.services.mozilla.com/D74644